# madura_api

./: .gitignore  CNAME  README.md  _config.yml  index.md  requirements.txt  setup.cfg
madura-api-master/: package-lock.json  package.json
src/madura_api/: __init__.py  dictionary.db  main.py
