[metadata]
name = madura_api
version = 0.1.3
author = nova9
author_email = 
description = An API to access online madura dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nova9/madura_api
project_urls =
    Bug Tracker = https://github.com/nova9/madura_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    beautifulsoup4
    lxml

[options.packages.find]
where = src